# mews-fin

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP.md  build.py  create_demo_results.py  demo_enhanced.py.bak  demo_simple.py.bak  docker-compose.yml  enhanced_integration.py  main.py  main_clean.py  pyproject.toml  requirements-dev.txt  requirements.txt  robustness_eval.py  streamlit_app.py  streamlit_app.py.bak  test_improved_sentiment.py  test_sentiment.py  train_gpu_models.py
.github/workflows/: ci.yml  release.yml
config/: .env.template
data/: AAPL_stock_data.csv  ABBV_stock_data.csv  AMZN_stock_data.csv  BAC_stock_data.csv  BRK-B_stock_data.csv  CVX_stock_data.csv  GOOGL_stock_data.csv  HD_stock_data.csv  JNJ_stock_data.csv  JPM_stock_data.csv  MA_stock_data.csv  META_stock_data.csv  MSFT_stock_data.csv  NVDA_stock_data.csv  PFE_stock_data.csv  PG_stock_data.csv  TSLA_stock_data.csv  UNH_stock_data.csv  V_stock_data.csv  XOM_stock_data.csv  combined_stock_data.csv  dataset_summary.txt  dataset_with_risk_labels.csv  feature_groups.json  integrated_dataset.csv  model_results.json  sec_filings.csv  sec_filings_text.csv  sec_sentiment.csv  sentiment_aggregated.csv
docs/: RESEARCH_GUIDE.md
mlruns/0/: meta.yaml
models/models_20250929_222411/: feature_importance.json  logistic_regression_model.pkl  scalers.pkl  svm_model.pkl  xgboost_model.pkl
models/models_20250930_150723/: model_metrics.json  scalers.pkl  svm_model.pkl  xgboost_model.pkl
models/models_20250930_151840/: feature_importance.json  logistic_regression_model.pkl
models/models_20251001_125947/: logistic_regression_model.pkl  model_metrics.json
models/models_20251001_133041/: model_metrics.json
models/models_20251001_160858/: feature_importance.json  gpu_info.json  model_metrics.json  thresholds.json
models/models_20251001_162930/: model_metrics.json  scalers.pkl  xgboost_model.pkl
models/models_20251001_222119/: model_metrics.json  random_forest_model.pkl  scalers.pkl  svm_model.pkl
models/models_20251001_222557/: feature_importance.json  logistic_regression_model.pkl  thresholds.json  xgboost_model.pkl
models/models_20251001_222558/: feature_importance.json  logistic_regression_model.pkl  model_metrics.json  random_forest_model.pkl  scalers.pkl  svm_model.pkl  thresholds.json  xgboost_model.pkl
models/models_20251008_001436/: feature_importance.json  thresholds.json  xgboost_model.pkl
models/models_20251010_171231/: random_forest_model.pkl
notebooks/: 01_ML_Models_Training.ipynb  02_Sentiment_Analysis.ipynb  03_Complete_MEWS_Pipeline.ipynb
outputs/: risk_analysis_report.html
scripts/: generate_news_sentiment_snapshot.py  generate_shap_summary.py
src/: __init__.py  backtester.py  config.py  data_fetcher.py  data_integrator.py  data_preprocessor.py  enhanced_risk_analyzer.py  enhanced_risk_timeline.py  metrics.py  ml_models.py  multimodal_fusion.py  news_collector.py  sec_downloader.py  sentiment_analyzer.py  visualizer.py  xai_utils.py
src/baselines/: __init__.py  base.py  garch.py  (+2 more)
tests/: __init__.py  conftest.py  test_baselines_and_experiments.py  test_data_processing.py  test_fusion_transformer.py  test_gnn_risk_predictor.py  test_hypothesis_suite.py  test_ml_models.py  test_robustness.py
tools/: pack_test.py
(+163 files in other folders)
